update plugin feedback

--- a/Plugins/SIngularity/SIngularity.uplugin
+++ b/Plugins/SIngularity/SIngularity.uplugin
@@ -6,8 +6,8 @@
 	"Description": "Singularity Unreal Plugin",
 	"Category": "Other",
 	"CreatedBy": "Shubham Garg",
-	"CreatedByURL": "https://neobrix.io/",
-	"DocsURL": "",
+	"CreatedByURL": "http://s9y.gg/",
+	"DocsURL": "https://github.com/coinbrix/Singularity-Unreal",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
