packaging issue fix

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -6,3 +6,7 @@ bAllowClassAndBlueprintPinMatching=true
 bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
+
+[CookSettings]
+MemoryMinFreeVirtual=1024
+MemoryMinFreePhysical=512
