Singularity editable url changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/MacTargetPlatform.MacTargetSettings]
+TargetArchitecture=MacTargetArchitectureAppleSil
+
