--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,25 +1,7 @@
-[URL]
-GameName=Singularity
+
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
-GlobalDefaultServerGameMode=None
-
-[/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
-r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.Lumen.TraceMeshSDFs=0
-r.Shadow.Virtual.Enable=1
-r.Mobile.EnableNoPrecomputedLightingCSMShader=1
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -56,14 +38,25 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+r.DynamicGlobalIlluminationMethod=1
+r.ReflectionMethod=1
+r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+
+[/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
+CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
+
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Singularity")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Singularity")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SingularityPlugin")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SingularityPlugin")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SingularityPluginGameModeBase")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=C3C02D5D5B4F0854BFD981AEFFFC00CB
+SecurityToken=CD10F9133648D3847C64A38A260FA14E
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -73,7 +66,4 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
-
-[/Script/MacTargetPlatform.MacTargetSettings]
-TargetArchitecture=MacTargetArchitectureAppleSil
 
