--- a/Plugins/SingularityPl/SingularityPl.uplugin
+++ b/Plugins/SingularityPl/SingularityPl.uplugin
@@ -2,7 +2,10 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "SingularityPl",
+    "EngineVersion" : "5.2.0",
+    "WhitelistPlatforms": [ "Win64", "Mac", "IOS", "Android" ],
+    "MarketplaceURL" : "com.epicgames.launcher://ue/marketplace/product/95a7bef8517d4cfb8d2d1f2eeb8a3650",
+	"FriendlyName": "Singularity",
 	"Description": "",
 	"Category": "Other",
 	"CreatedBy": "shubham garg",
