--- a/Plugins/SingularityPl/SingularityPl.uplugin
+++ b/Plugins/SingularityPl/SingularityPl.uplugin
@@ -2,14 +2,16 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "SingularityPl",
-	"Description": "",
+    "EngineVersion" : "5.2.0",
+    "WhitelistPlatforms": [ "Win64", "Mac" ],
+    "MarketplaceURL" : "com.epicgames.launcher://ue/marketplace/product/95a7bef8517d4cfb8d2d1f2eeb8a3650",
+	"FriendlyName": "Singularity",
+	"Description": "Singularity provide easy integration of authentecation in games",
 	"Category": "Other",
 	"CreatedBy": "shubham garg",
 	"CreatedByURL": "",
-	"DocsURL": "",
-	"MarketplaceURL": "",
-	"SupportURL": "",
+	"DocsURL": "https://docs.s9y.gg/",
+	"SupportURL": "https://www.s9y.gg/",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
